Working version commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+splitter.symbols = [\\s,|\\,|\\.|\\!|\\?|\\;|\\:\\[\\]\\(|\\)|\n|\r|\t|\"]
+savefolder.path = C:/MyDownloadedPages
+savingfile.name = page.html
 
+logging.level.org.springframework.web=ERROR
+logging.level.com.github.vladioeroonda.testtask=DEBUG
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file.path=C:\\MyDownloadedPages\\logfile
